fixed visibility

--- a/my_style.css
+++ b/my_style.css
@@ -1486,7 +1486,7 @@ margin-top: 10px;
 }
 
 
-@media screen and (min-width: 995px) {
+@media screen and (min-width: 996px) {
   #menucontainer_1 {
     display: none;
   }
@@ -1494,7 +1494,7 @@ margin-top: 10px;
 }
 
 
-@media screen and (max-width: 995px) {
+@media screen and (max-width: 996px) {
   #menucontainer {
     display: none;
   }
